codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_auto_policy_narrow.snap
---
source: tui/src/chatwidget/tests/account_profiles.rs
expression: "render_bottom_popup(&chat, 40)"
---
  Automatic account selection


     Status: off
› 1. Turn on
     Policy: Priority
     Priority order: higher numbers
     drain first; smaller numbers drain
     last
     Eligible: Managed ChatGPT OAuth
     only
     Stale/unknown limits
     Never auto-selected

  enter confirm · esc back
