codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_auto_policy_wide.snap
---
source: tui/src/chatwidget/tests/account_profiles.rs
expression: auto
---
  Automatic account selection


     Status: off
› 1. Turn on
     Policy: Priority
     Priority order: higher numbers drain first; smaller numbers drain
     last
     Eligible: Managed ChatGPT OAuth only
     Stale/unknown limits
     Never auto-selected

  enter confirm · esc back
