codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_editor_validation_wide_narrow.snap
---
source: tui/src/chatwidget/tests/account_profiles.rs
expression: "[alias, note, priority.clone()].join(\"\\n---\\n\")"
---
  Edit correctable
  Lowercase letters/digits/._-; start with one (1–64).

› INVALID-alias

  enter submit · esc back
---
  Note for correctable
  Max 1024 bytes; no control characters.

› correctable note

  enter submit · esc back
---
  Priority for correctable
  Higher first; smaller last (0–u32
  max)

› 42

  enter submit · esc back
