codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_login_failure.snap
---
source: tui/src/chatwidget/tests/account_profiles.rs
expression: rendered.clone()
---
  Accounts
  Account sign-in failed.

  Search accounts

› Add account
  Automatic selection  off · policy: Priority · higher numbers drain
                       first; smaller numbers drain last

  enter confirm · esc back
