codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_selector_loading_empty_error_long.snap
---
source: tui/src/chatwidget/tests/account_profiles.rs
expression: "[loading, empty, error, long].join(\"\\n---\\n\")"
---
  Accounts


›    Loading account profiles...

  enter confirm · esc back
---
  Accounts
  No account profiles configured.

  Search accounts

› Add account
  Automatic selection  Status unavailable

  enter confirm · esc back
---
  Accounts
  The account request could not be completed.


› 1. Try again

  enter select · esc back
---
  Accounts

  Search accounts

› ● a-very-long-account-alias-that… a-very-long-
                                    account-alias-
                                    that-needs-
                                    wrapping@example
                                    .com · Plus ·
                                    signed in ·
                                    enabled ·
                                    default ·
                                    priority 10 ·
                                    limits unknown
  Add account
  Automatic selection               off · policy:
                                    Priority ·
                                    higher numbers
                                    drain first;
                                    smaller numbers
                                    drain last

  enter confirm · esc back
